Added the WebClient that lets the app talk to the Python Scorer API.